--- a/Client/index.css
+++ b/Client/index.css
@@ -1,6 +1,7 @@
   
   body {
-    background-color: whitesmoke;
+    background-color: #BCD0C7;
+    color: #C5DAC1;
   }
   
 
@@ -12,28 +13,27 @@
   form {
     width: 350px;
     height: 350px;
-    background-color: darkslategray;
+    background-color: #137547;
     position: relative;
     display: flex; 
     flex-direction: column;
     justify-content: space-evenly; 
     align-items: center;
     margin: 30px;
+    box-shadow: 8px 4px 4px black;
   }
   
   button {
-    background-color: blue;
+    background-color: #A9B2AC;
     width: 75px;
     height: 50px;
-    color: orange;
+    color: black;
     border: none;
     margin: 5px;
     border-radius: 100%;
+    box-shadow: 8px 4px 4px black;
   }
-  #nameGenButton {
-    height: 100px;
-
-  }
+  
   
   input[type='text'] {
     width: 85%;
@@ -42,11 +42,12 @@
     border-bottom: 2px solid #232323;
     color: #232323;
     background-color: snow;
+    box-shadow: 8px 4px 4px black;
   }
   
   
  
-  #teamsContainer {
+  #playersContainer {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
@@ -60,8 +61,8 @@
     border-top-right-radius: 12px;
   }
   
-  .team-card {
-    background-color: lightblue;
+  .player-card {
+    background-color: #137547;
     width: 300px;
     margin: 20px; 
     display: flex;
@@ -70,6 +71,7 @@
     border-radius: 12px;
     border-top-left-radius: 15px;
     border-top-right-radius: 15px;
+    box-shadow: 10px 5px 5px black;
    
   }
   .btns-container {
@@ -82,5 +84,51 @@
   .btns-container > button {
     width: 20px;
   }
+  header {
+    background-color: #137547;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    
+  }
+
+  #randomatic {
+    background-color: #137547;
+    border: #232323;
+    border-width: 2pt;
+    border-style:groove;
+    box-shadow: 5px 4px 4px black;
+   }
+
+   .playerimg {
+    height: 250px;
+    width: 300px;
+   }
+ #nav {
+background-color: darkslategray;
+color: #C5DAC1;
+height: 75px;
+ }
+
+ .navButtons {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap:wrap;
+  width: 100px;
   
- 
+ }
+
+ #rankings {
+  display: flex;
+  background-color:#BCD0C7;
+  
+
+  color: #232323;
+ }
+
+ .rank {
+  background-color: #137547;
+  flex: 50%;
+ }
