--- a/client/index.css
+++ b/client/index.css
@@ -113,31 +113,15 @@
     width: 300px;
    }
 
- #rankings {
-  display: flex;
-  background-color:#BCD0C7;
-  
-
-  color: #232323;
- }
-
  .rank {
-  background-color: #A9B2AC;
-  position: relative;
-  left: 70rem; 
+  color: black;
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 300px;
- box-shadow: 5px 5px 5px black;
+  width: 100%;
   font-size: 18pt;
-  border: 5px solid black;
-  margin-top: 5rem;
-  
-  border-radius: 20px;
-  padding: 5px;
-  
- }
+  margin-top: 2rem;
+  }
 
  .where {
   background-color: #A9B2AC;
@@ -152,10 +136,6 @@
   
  }
 
- .rankBody {
-  
-  background-image: url("https://images.unsplash.com/photo-1566577739112-5180d4bf9390?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1926&q=80");
- }
  .go {
   width: 40px;
   height: 40px;
