--- a/client/index.css
+++ b/client/index.css
@@ -8,7 +8,6 @@
     width: 20rem;
     height: 20rem;
     background-color: #A9B2AC;
-    position: relative;
     display: flex; 
     flex-direction: column;
     justify-content: space-evenly; 
@@ -46,17 +45,8 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    width: 70%;
-    position: absolute;
-    right: 0rem;
-  
-   }
-   #addbox{
-    width: 20%;
-    position: absolute;
-    left: 0rem;
-   }
-  
+  }
+
   .teamLogo {
     width: 300px; 
     height: 300px;
@@ -150,11 +140,6 @@
   color: white;
   border: 2px solid black;
  }
- #add {
-  position: fixed;
-  left: 20px;
-  top: 220px;
- }
  
 #randoButts{
   width: 100%;
@@ -165,4 +150,10 @@
 
 header{
   background-color: #8d99ae;
+}
+
+#add_player{
+  display: flex;
+  justify-content: center;
+  width: 100%;
 }
